--- a/deals-grid/package.json
+++ b/deals-grid/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "sass": "^1.78.0",
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
     "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.4.1"
+    "@vue/test-utils": "^2.4.6",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "vite": "^5.4.1",
+    "vue-jest": "^5.0.0-alpha.10"
   }
 }
